--- a/css/css.css
+++ b/css/css.css
@@ -3,11 +3,35 @@
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
+}
 
+body {
+    margin: 0;
+    padding: 0;
+    color:#555555;
+   
 }
-.navbar-border{
-    border-bottom:1px solid transparent;
+
+.clearfix:after {
+    content: " "; /* Older browser do not support empty content */
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
 }
+
+.section-container {
+    padding-bottom: 50px;
+}
+.section-container2 {
+    padding-bottom: 50px;
+    background: #13836c;
+    color: #fff;
+    background-image: -webkit-linear-gradient(top, #13836c 0%, #45b59e 100%);
+    background-image: linear-gradient(to bottom, #13836c 0%, #45b59e 100%);
+    background-repeat: repeat-x;
+}
+
 .navbar{
     background-color: #ffffff;
     border-bottom-color: #e6e6e6;
@@ -19,22 +43,10 @@
     top: 0;
     z-index: 1;
 }
-body {
-    margin: 0;
-    padding: 0;
-}
-.clearfix:after {
-    content: " "; /* Older browser do not support empty content */
-    visibility: hidden;
-    display: block;
-    height: 0;
-    clear: both;
+.navbar-border{
+    border-bottom:1px solid transparent;
 }
 
-.section-container {
-
-    padding-bottom: 50px;
-}
 .navbar > .navbar-list {
     list-style-type: none;
     margin: 0;
@@ -56,11 +68,16 @@ body {
     display: inline-block;
 }
 .navbar > .navbar-list > .navbar-item a:hover {
-
-    color: black;
-    font-size: 20px;
-
+    color: #4fbfa8;
 }
+
+
+.estado{
+    background-color: #4fbfa8;
+    height: 5px;
+    width: 100%;
+}
+
 
 .header > .title-img {
     background-size: 100% 100%;
@@ -103,10 +120,11 @@ body {
 }
 
 .cabecera-seccion{
+    margin-top: 80px;
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
-    border-bottom: 1px solid red;
+    border-bottom: 2px solid #4fbfa8;
     width: 50%;
     margin-left: 25%;
     font-size: 28px;
@@ -135,7 +153,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-
 }
 .contenedor-progresos-centrado{
 
@@ -154,7 +171,8 @@ body {
 .base-progreso{
     height:24px;
     width:70%;
-    background-color: #777777;
+    background-color: #d6d6d6;
+    border-radius: 25px;
 }
 
 #php-progreso{
@@ -162,8 +180,9 @@ body {
     justify-content: center;
     height:24px;
     width:0%;
-    background-color: green;
+    background-color: #4fbfa8;
     visibility: hidden;
+    border-radius: 25px;
 
 }
 
@@ -172,8 +191,9 @@ body {
     justify-content: center;
     height:24px;
     width:0%;
-    background-color: green;
+    background-color: #4fbfa8;
     visibility: hidden;
+    border-radius: 25px;
 
 }
 
@@ -182,8 +202,9 @@ body {
     justify-content: center;
     height:24px;
     width:0%;
-    background-color: green;
+    background-color: #4fbfa8;
     visibility: hidden;
+    border-radius: 25px;
 }
 
 #js-progreso{
@@ -191,8 +212,9 @@ body {
     justify-content: center;
     height:24px;
     width:0%;
-    background-color: green;
+    background-color: #4fbfa8;
     visibility: hidden;
+    border-radius: 25px;
 
 }
 .php-Animacion{
@@ -232,14 +254,14 @@ body {
     animation-delay: 1s;
 }
 
-#estudios{
+#contenedor-estudios-padre{
     visibility: hidden;
 }
 .estudios-Animacion{
     -webkit-animation:estudios-Animacion 1s forwards;
     -o-animation:estudios-Animacion 1s forwards;
     animation:estudios-Animacion 1s forwards;
-    animation-delay:1.5s;
+    animation-delay:0.5s;
 }
 .contenedor-logo-estudios{
     height:100px;
@@ -278,7 +300,16 @@ body {
 }
 .boton-slider{
     align-self: center;
-
+}
+button{
+    background-color: #13836c;
+    color: white;
+    border-color: #13836c;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-size: 12px;
+    border-radius: 25px;
 }
 
 
@@ -302,21 +333,38 @@ input {
 .otros-comentario{
     width: 200px;
 }
-button{
-    background-color: #4CAF50;
+
+
+.btareas{
+    background-color: #13836c;
+    border: none;
     color: white;
-    border-color: #4CAF50;
+    padding: 10px 40px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-size: 12px;
+    border-radius: 25px;
 }
-#Enviar, input[type=submit] {
-    background-color: #4CAF50;
+button:hover{
+    background-color: #929292;
+}
+#Enviar {
+    background-color: #929292;
     border: none;
     color: white;
     padding: 15px 40px;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
-    border-radius: 0px;
+    font-size: 18px;
+    border-radius: 25px;
 }
+#Enviar:hover{
+    background-color: #fff;
+    color: #13836c;
+}
+
 
 #contacto-recibido{
     color: #4CAF50;
@@ -369,12 +417,20 @@ tr:hover {
     color: red;
 }
 .footer {
-    background-color: #4CAF50;
+    background: #13836c;
+    color: #fff;
+    background-image: -webkit-linear-gradient(top, #13836c 0%, #45b59e 100%);
+    background-image: linear-gradient(to bottom, #13836c 0%, #45b59e 100%);
+    background-repeat: repeat-x;
     height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+}
+
+.span-derecho{
+    margin-left: 15px;
 }
 
 /*Animaciones*/
